--- a/src/components/Cards/IconCard/IconCard.astro
+++ b/src/components/Cards/IconCard/IconCard.astro
@@ -8,27 +8,27 @@ interface Props {
     cards: Card[];
     direction?: "column" | "row";
 }
-import "./card.css";
+import s from "./style.module.css";
 import { Icon } from "astro-iconify";
 const { cards, direction = "row" } = Astro.props;
 ---
 
-<div class="icon_card" style={`--direction: ${direction};`}>
+<div class={s["icon_card"]} style={`--direction: ${direction};`}>
     {
         cards.map((card: Card) => (
-            <div class="icon_card__item">
-                <div class="icon_card__header">
-                    <div class="icon_card__icon_wrapper">
+            <div class={s["icon_card__item"]}>
+                <div class={s["icon_card__header"]}>
+                    <div class={s["icon_card__icon_wrapper"]}>
                         {card.icon_name && (
                             <Icon
                                 name={card.icon_name}
                                 aria-hidden="true"
                                 focusable="false"
-                                class="icon_card__icon"
+                                class={s["icon_card__icon"]}
                             />
                         )}
                     </div>
-                    <h3 class="icon_card__title">{card.title}</h3>
+                    <h3 class={s["icon_card__title"]}>{card.title}</h3>
                 </div>
                 <div>
                     <slot set:html={card.content} />
