--- a/src/components/Cards/Alternating/Alternating.astro
+++ b/src/components/Cards/Alternating/Alternating.astro
@@ -4,22 +4,22 @@ interface Card {
         [key: string]: any;
     };
 }
-import "./alternating.css";
+import s from "./style.module.css";
 import CustomImage from "@components/CustomImage.astro";
 const { cards } = Astro.props;
 ---
 
-<div class="alternating-card-grid">
+<div class={s["alternating-card-grid"]}>
     {
         cards.map((card: Card) => (
-            <div class="alternating-card" data-has-background>
-                <div class="alternating-card__image-wrapper">
+            <div class={s["alternating-card"]} data-has-background>
+                <div class={s["alternating-card__image-wrapper"]}>
                     {card.expand.image && (
                         <CustomImage
                             eager={false}
                             image={card.expand.image}
                             size="medium"
-                            classlist="alternating-card__image"
+                            classlist={s["alternating-card__image"]}
                         />
                     )}
                 </div>
