--- a/src/components/Cards/ContentCard/ContentCard.astro
+++ b/src/components/Cards/ContentCard/ContentCard.astro
@@ -1,35 +1,23 @@
 ---
-interface Card {
-    title: string;
-    content: any;
-    expand: {
-        image: {
-            file: string;
-            title: string;
-            position: string;
-            fit: string;
-        };
-    };
-}
-import "./card.css";
+import s from "./style.module.css";
 import CustomImage from "@components/CustomImage.astro";
 const { cards } = Astro.props;
 ---
 
-<div class="content_card__grid">
+<div class={s["content_card__grid"]}>
     {
-        cards.map((card: Card) => (
-            <div class="content_card__content_wrapper">
-                <div class="content_card__content">
-                    <h3 class="content_card__content_title">{card.title}</h3>
+        cards.map((card: any) => (
+            <div class={s["content_card__content_wrapper"]}>
+                <div class={s["content_card__content"]}>
+                    <h3 class={s["content_card__content_title"]}>{card.title}</h3>
                     <slot set:html={card.content} />
                 </div>
-                <div class="content_card__image_wrapper">
+                <div class={s["content_card__image_wrapper"]}>
                     <CustomImage
                         image={card.expand.image}
                         eager={true}
                         size="large"
-                        classlist="content_card__image"
+                        classlist={s["content_card__image"]}
                     />
                 </div>
             </div>
