--- a/src/components/Footer/FloatingFooter/FloatingFooter.astro
+++ b/src/components/Footer/FloatingFooter/FloatingFooter.astro
@@ -9,7 +9,8 @@ interface Props {
 }
 
 import Container from "@components/Container.astro";
-import "./footer.css";
+import s from "./style.module.css";
+
 import { Image } from "astro:assets";
 const { title, company, url, country } = Astro.props;
 
@@ -17,9 +18,9 @@ const copyright = translateFooterItem('copyright', country);
 const designedByText = translateFooterItem('designed_by', country);
 ---
 
-<footer class="floating_footer page-section">
+<footer class={s["floating_footer page-section"]}>
     <Container>
-        <div class="breakout floating_footer__content" data-highlight="true">
+        <div class={s["breakout floating_footer__content"]} data-highlight="true">
             <p>
                 &copy; {new Date().getFullYear()} {title.split("|")[0].trim()}. {copyright}
             </p>
@@ -27,16 +28,16 @@ const designedByText = translateFooterItem('designed_by', country);
                 href={url}
                 target="_blank"
                 rel="noopener noreferrer"
-                class="floating_footer__logo"
+                class={s["floating_footer__logo"]}
             >
                 <Image
                     src="/yellow-pages-logo.webp"
                     alt="yellow pages logo"
                     width={50}
                     height={50}
-                    class="floating_footer__logo-image"
+                    class={s["floating_footer__logo-image"]}
                 />
-                <span class="floating_footer__logo-text"
+                <span class={s["floating_footer__logo-text"]}
                     >{designedByText} {company}</span
                 >
             </a>
