--- a/src/components/Hero/BigName/BigName.astro
+++ b/src/components/Hero/BigName/BigName.astro
@@ -1,23 +1,23 @@
 ---
+import type { HeroBlock } from "@utils/payload/types";
+interface Props extends HeroBlock {}
 import Container from "@components/Container.astro";
-import "./hero.css";
+import s from "./style.module.css";
 import CustomImage from "@components/CustomImage.astro";
-import type { HeroProps } from "@utils/types";
-interface Props extends HeroProps {}
-const { title, excerpt, image } = Astro.props;
+const props = Astro.props;
 ---
 
-<header class="big_name_hero" data-centered="true">
+<header class={s["big_name_hero"]} data-centered="true">
     <Container>
-        <div class="big_name_hero__wrapper full-height">
-            <article class="big_name_hero__content">
-                <h1>{title}</h1>
-                <p>{excerpt}</p>
+        <div class:list={[s["big_name_hero__wrapper"], "full-height"]}>
+            <article class={s["big_name_hero__content"]}>
+                <h1>{props.heading}</h1>
+                <p>{props.excerpt}</p>
             </article>
         </div>
-        <div class="big_name_hero__overlay full-width full-height"></div>
+        <div class:list={[s["big_name_hero__overlay"], "full-width", "full-height"]}></div>
         <CustomImage
-            image={image}
+            image={props.cover}
             classlist="big_name_hero__image full-width full-height"
             size="large"
             eager={true}
