--- a/src/components/Hero/SplitHero/SplitHero.astro
+++ b/src/components/Hero/SplitHero/SplitHero.astro
@@ -3,20 +3,20 @@ import type { HeroBlock } from "@utils/payload/types";
 interface Props extends HeroBlock {}
 
 import Container from "@components/Container.astro";
-import "./style.css";
+import s from "./style.module.css";
 import CustomImage from "@components/CustomImage.astro";
 const props = Astro.props;
 ---
 
-<header class="split-hero">
+<header class={s["split-hero"]}>
     <Container>
-        <div class="split-hero__wrapper">
-            <article class="split-hero__content" data-animate="fade-slide-load" data-animate-children-only="true">
-                <h1 class="split-hero__title">{props.heading}</h1>
+        <div class={s["split-hero__wrapper"]}>
+            <article class={s["split-hero__content"]} data-animate="fade-slide-load" data-animate-children-only="true">
+                <h1 class={s["split-hero__title"]}>{props.heading}</h1>
                 <p>{props.excerpt}</p>
                 <a
                     href="#contact"
-                    class="btn  btn--primary"
+                    class="btn btn--primary"
                     style="margin-top: 0.825rem;">Let's Talk</a
                 >
             </article>
@@ -24,7 +24,7 @@ const props = Astro.props;
                 eager={true}
                 image={props.cover}
                 size="large"
-                classlist="split-hero__image"
+                classlist={s["split-hero__image"]}
                 data-animate="blur-load"
             />
         </div>
