--- a/src/components/Hero/StylisedHorizontalHero/StylisedHorizontalHero.astro
+++ b/src/components/Hero/StylisedHorizontalHero/StylisedHorizontalHero.astro
@@ -1,25 +1,26 @@
 ---
 import type { HeroBlock } from "@utils/payload/types";
 import Container from "@components/Container.astro";
-import "./hero.css";
+import s from "./style.module.css";
+
 import CustomImage from "@components/CustomImage.astro";
 interface Props extends HeroBlock {}
 const { heading, excerpt, cover } = Astro.props;
 ---
 
-<header class='alternate_horizontal_hero content_section'>
+<header class={s['alternate_horizontal_hero']}>
     <Container>
-        <div class="alternate_horizontal_hero__wrapper">
-            <article class="alternate_horizontal_hero__content">
+        <div class={s["alternate_horizontal_hero__wrapper"]}>
+            <article class={s["alternate_horizontal_hero__content"]}>
                 <h1>{heading}</h1>
                 <p>{excerpt}</p>
             </article>
 
-            <div class="alternate_horizontal_hero__image_wrapper">
+            <div class={s["alternate_horizontal_hero__image_wrapper"]}>
                 <CustomImage
                     image={cover}
                     size="large"
-                    classlist="alternate_horizontal_hero__image"
+                    classlist={s["alternate_horizontal_hero__image"]}
                     eager={true}
                 />
             </div>
