--- a/src/components/Hero/VerticalHero/VerticalHero.astro
+++ b/src/components/Hero/VerticalHero/VerticalHero.astro
@@ -3,15 +3,16 @@ import type { HeroBlock } from "@utils/payload/types";
 interface Props extends HeroBlock {}
 
 import Container from "@components/Container.astro";
-import "./hero.css";
+import s from "./style.module.css";
+
 import CustomImage from "@components/CustomImage.astro";
 
 const props = Astro.props;
 ---
 
-<header class="vertical_hero content_section bg--primary-darker">
+<header class:list={[s["vertical_hero content_section"], "bg--primary-darker"]}>
     <Container>
-        <article class="vertical_hero__content" data-direction="column">
+        <article class={s["vertical_hero__content"]} data-direction="column">
             <h1>{props.heading}</h1>
             <div>
                 <p>{props.excerpt}</p>
@@ -24,9 +25,9 @@ const props = Astro.props;
             </div>
         </article>
 
-        <div class="vertical_hero__image_wrapper breakout">
+        <div class:list={[s["vertical_hero__image_wrapper"], "breakout"]}>
             <CustomImage
-                classlist="vertical_hero__image"
+                classlist={s["vertical_hero__image"]}
                 eager={true}
                 image={props.cover}
                 size="large"
