--- a/src/components/PageNavigation/SimpleNav/style.module.css
+++ b/src/components/PageNavigation/SimpleNav/style.module.css
@@ -119,7 +119,7 @@
 .simple-nav__link {
     display: block;
     padding: var(--size-2) var(--size-3);
-    color: inherit;
+    /* color: inherit; */
     text-decoration: none;
     text-transform: capitalize;
     font-weight: var(--heading-large-weight);
