--- a/src/components/Sections/ContentWithMedia/ContentWithMedia.astro
+++ b/src/components/Sections/ContentWithMedia/ContentWithMedia.astro
@@ -2,32 +2,32 @@
 import type { ContentWithMediaBlock } from "@utils/payload/types";
 interface Props extends ContentWithMediaBlock {}
 import Container from "@components/Container.astro";
-import "./section.css";
+import s from "./style.module.css";
 import CustomImage from "@components/CustomImage.astro";
 import { extractLexicalText } from "@utils/payload/helpers";
 const props = Astro.props;
 ---
 
 <div
-    class="content-with-media page-section"
+    class:list={[s["content-with-media"], "page-section"]}
     data-highlight={props.highlight}
     id={props["anchor id"]?.split(" ").join("-")}
     data-offscreen
     data-animate="fade-slide"
 >
     <Container>
-        <div class="content-with-media__content_wrapper" data-position={props.position}>
-            <article class="content-with-media__article">
-                <header class="content-with-media__header">
+        <div class={s["content-with-media__content_wrapper"]} data-position={props.position}>
+            <article class={s["content-with-media__article"]}>
+                <header class={s["content-with-media__header"]}>
                     <h2>{props.title}</h2>
                 </header>
-                <div class="content-with-media__content">
+                <div class={s["content-with-media__content"]}>
                     <slot set:html={extractLexicalText(props.body)} />
                 </div>
             </article>
-            <div class="content-with-media__image_wrapper">
+            <div class={s["content-with-media__image_wrapper"]}>
                 <CustomImage
-                    classlist="content-with-media__image"
+                    classlist={s["content-with-media__image"]}
                     eager={false}
                     size="medium"
                     image={props.image}
