--- a/src/components/Sections/Sections.astro
+++ b/src/components/Sections/Sections.astro
@@ -4,7 +4,7 @@ import ContentWithMedia from "@components/Sections/ContentWithMedia/ContentWithM
 import ContentWithGrid from "@components/Sections/ContentWithGrid/ContentWithGrid.astro"
 import WhyChooseUsColumn from "@components/Sections/Stats/WhyChooseUsColumn/WhyChooseUsColumn.astro"
 import SimpleCallToAction from "@components/Sections/CtaSection/SimpleCallToAction/SimpleCallToAction.astro"
-import PageHero from "@components/Hero/PageHero.astro"
+import SimpleHero from "@components/Hero/SimpleHero.astro"
 import SimpleTestimonial from "@components/Sections/Testimonial/SimpleTestimonial/SimpleTestimonial.astro"
 import ContactSection from "@components/Sections/Contact Sections/ContactSection.astro"
 import ThreeImageCta from "@components/Sections/CtaSection/ThreeImageCta/ThreeImageCta.astro"
@@ -20,7 +20,7 @@ const {blocks, socialLinks, operatingHours, coreValues} = await fetchPage(['bloc
     blocks.map(block => {
         switch (block.blockType) {
             case 'simple-hero':
-                return <PageHero {...block}/>
+                return <SimpleHero {...block}/>
             case 'content-with-media':
                 return <ContentWithMedia {...block}/>
             case 'content-with-grid':
