--- a/src/components/Sections/Stats/WhyChooseUsGrid/WhyChooseUsGrid.astro
+++ b/src/components/Sections/Stats/WhyChooseUsGrid/WhyChooseUsGrid.astro
@@ -3,7 +3,7 @@ import type { WhyChooseUsColumnBlock } from "@utils/payload/types";
 interface Props extends WhyChooseUsColumnBlock {}
 
 import { Icon } from "astro-iconify";
-import "./stats.css"
+import s from "./style.module.css"
 import Container from "@components/Container.astro";
 import { extractLexicalText } from "@utils/payload/helpers";
 const props = Astro.props
@@ -18,14 +18,14 @@ const cardStyles = [
 ];
 ---
 
-<div class="content_section" data-offscreen>
+<div class="page-section" data-offscreen>
     <Container>
-        <div class="simple-stats__container container">
-            <div class="simple-stats__grid">
-                <div class="simple-stats__header">
-                    <div class="simple-stats__header-content">
+        <div class={s["simple-stats__container"]}>
+            <div class={s["simple-stats__grid"]}>
+                <div class={s["simple-stats__header"]}>
+                    <div class={s["simple-stats__header-content"]}>
                         <h2>{props.title}</h2>
-                        <slot class="simple-stats__description" set:html={extractLexicalText(props.description)} />
+                        <slot class={s["simple-stats__description"]} set:html={extractLexicalText(props.description)} />
                     </div>
                 </div>
                 {
@@ -33,14 +33,14 @@ const cardStyles = [
                         const style = cardStyles[index % cardStyles?.length];
                         return (
                             <div
-                                class="simple-stats__item"
+                                class={s["simple-stats__item"]}
                             >
-                                <div class="simple-stats__icon-box">
-                                    <Icon class="simple-stats__icon" name={card.icon} aria-hidden="true" focusable="false" />
+                                <div class={s["simple-stats__icon-box"]}>
+                                    <Icon class={s["simple-stats__icon"]} name={card.icon} aria-hidden="true" focusable="false" />
                                 </div>
-                                <div class="simple-stats__item-content">
+                                <div class={s["simple-stats__item-content"]}>
                                     <h3>{card.title}</h3>
-                                    <slot class="simple-stats__description" set:html={extractLexicalText(card.body)} />
+                                    <slot class={s["simple-stats__description"]} set:html={extractLexicalText(card.body)} />
                                 </div>
                             </div>
                         )
