--- a/src/components/Sections/Stats/WhyChooseUsInteractive/WhyChooseUsInteractive.astro
+++ b/src/components/Sections/Stats/WhyChooseUsInteractive/WhyChooseUsInteractive.astro
@@ -3,7 +3,7 @@ import type { WhyChooseUsInteractiveBlock } from "@utils/payload/types";
 interface Props extends WhyChooseUsInteractiveBlock {}
 
 import { Icon } from "astro-iconify";
-import "./style.css";
+import s from "./style.module.css";
 import Container from "@components/Container.astro";
 import CustomImage from "@components/CustomImage.astro";
 import { extractLexicalText } from "@utils/payload/helpers";
@@ -11,29 +11,29 @@ const props = Astro.props;
 ---
 
 <div
-    class="page-section why-choose-us-interactive"
+    class:list={["page-section", s["why-choose-us-interactive"]]}
     data-highlight="false"
     data-offscreen
 >
     <Container>
-        <header class="page-section__header">
+        <header class={s["page-section__header"]}>
             <h2>{props.title}</h2>
             <slot set:html={extractLexicalText(props.description)} />
         </header>
 
-        <div class="interactive__wrapper">
-            <div class="interactive__image_container">
+        <div class={s["interactive__wrapper"]}>
+            <div class={s["interactive__image_container"]}>
                 {
                     props.options.map((option, index) => (
                         <div
-                            class="interactive__image_wrapper"
+                            class={s["interactive__image_wrapper"]}
                             data-visible={index === 0 ? true : false}
                             data-id={option.id}
                             data-interactive-image
                         >
                             <CustomImage
                                 image={option.image}
-                                classlist={`interactive__image interactive__image_${option.image.id}`}
+                                classlist={s[`interactive__image`]}
                                 size="large"
                                 eager={false}
                             />
@@ -42,11 +42,11 @@ const props = Astro.props;
                 }
             </div>
 
-            <div class="interactive__content_container">
+            <div class={s["interactive__content_container"]}>
                 {
                     props.options.map((option) => (
                         <div
-                            class="interactive__content"
+                            class={s["interactive__content"]}
                             data-controls={option.id}
                             data-interactive-control
                         >
