--- a/src/components/Sections/SymbioticAbout/SymbioticAbout.astro
+++ b/src/components/Sections/SymbioticAbout/SymbioticAbout.astro
@@ -2,31 +2,31 @@
 import type { SymbioticAboutBlock } from "@utils/payload/types";
 interface Props extends SymbioticAboutBlock {}
 import Container from "@components/Container.astro";
-import "./style.css";
+import s from "./style.module.css";
 import CustomImage from "@components/CustomImage.astro";
 import { extractLexicalText } from "@utils/payload/helpers";
 const props = Astro.props;
 ---
 
 <div
-    class="symbiotic-about page-section"
+    class:list={[s["symbiotic-about"], "page-section"]}
     data-highlight={props.highlight}
     id={props["anchor id"]?.split(" ").join("-")}
     data-offscreen
 >
     <Container>
-        <div class="symbiotic-about__top-section">
+        <div class={s["symbiotic-about__top-section"]}>
             <CustomImage
-                classlist="symbiotic-about__image"
+                classlist={s["symbiotic-about__image"]}
                 eager={false}
                 size="large"
                 image={props.image}
             />
             <Container>
-                <h2 class="symbiotic-about__title">
+                <h2 class={s["symbiotic-about__title"]}>
                     {props.title}
                 </h2>
-                <div class="symbiotic-about__excerpt">
+                <div class={s["symbiotic-about__excerpt"]}>
                     <slot set:html={extractLexicalText(props.excerpt)} />
                 </div>
             </Container>
@@ -34,8 +34,8 @@ const props = Astro.props;
     </Container>
 
     <Container>
-        <div class="symbiotic-about__bottom-section">
-            <div class="symbiotic-about__content">
+        <div class={s["symbiotic-about__bottom-section"]}>
+            <div class={s["symbiotic-about__content"]}>
                 <article>
                     <slot set:html={extractLexicalText(props.body)} />
                 </article>
