feat: Update button styles and add animations to various components for improved user experience

--- a/src/assets/css/buttons-and-links.css
+++ b/src/assets/css/buttons-and-links.css
@@ -24,6 +24,8 @@
 
 .btn:hover:not(:disabled) {
     filter: brightness(1.1);
+    color: var(--clr-secondary-text);
+    background-color: var(--clr-secondary);
 }
 
 .btn:disabled {
