--- a/src/components/Footer/TinyFooter/TinyFooter.astro
+++ b/src/components/Footer/TinyFooter/TinyFooter.astro
@@ -17,7 +17,7 @@ const copyright = translateFooterItem('copyright', country);
 const designedByText = translateFooterItem('designed_by', country);
 ---
 
-<footer class={s["full-width footer"]}>
+<footer class:list={[s["footer"], "full-width"]}>
     <Container>
         <div class={s["footer__content"]}>
             <p>
