--- a/src/components/Sections/Stats/WhyChooseUsGrid/WhyChooseUsGrid.astro
+++ b/src/components/Sections/Stats/WhyChooseUsGrid/WhyChooseUsGrid.astro
@@ -21,7 +21,7 @@ const cardStyles = [
 <div class="page-section" data-offscreen>
     <Container>
         <div class={s["simple-stats__container"]}>
-            <div class={s["simple-stats__grid"]}>
+            <div class={s["simple-stats__grid"]} data-animate="slide-up" data-animate-children-only="true">
                 <div class={s["simple-stats__header"]}>
                     <div class={s["simple-stats__header-content"]}>
                         <h2>{props.title}</h2>
