--- a/src/components/Hero/SplitHero/SplitHero.astro
+++ b/src/components/Hero/SplitHero/SplitHero.astro
@@ -17,7 +17,7 @@ const props = Astro.props;
                 <a
                     href="#contact"
                     class="btn btn--primary"
-                    style="margin-top: 0.825rem;">Let's Talk</a
+                    style="margin-top: 0.825rem;">Fale Connosco</a
                 >
             </article>
             <CustomImage
