--- a/src/components/PageNavigation/ExpandingPillNav/ExpandingPillNav.astro
+++ b/src/components/PageNavigation/ExpandingPillNav/ExpandingPillNav.astro
@@ -49,7 +49,7 @@ const pageLinks = menuItems.map((link: Link) =>
                     classlist={s["nav__logo-image"]}
                     size="small"
                 />
-                <span class={s["nav__logo-text"]}>{title}</span>
+                <!-- <span class={s["nav__logo-text"]}>{title}</span> -->
             </a>
             <ul
                 class={s["nav__menu"]}
