--- a/src/components/Sections/Contact Sections/OverlapContact/OverlapContact.astro
+++ b/src/components/Sections/Contact Sections/OverlapContact/OverlapContact.astro
@@ -19,7 +19,7 @@ const props = Astro.props;
         <Container>
             <div class={s["overlap-contact__top-row"]}>
                 <div>
-                    <h3>Location</h3>
+                    <h3>Localização</h3>
                     <address>
                         <slot
                             set:html={extractLexicalText(
@@ -35,7 +35,7 @@ const props = Astro.props;
 
             <div class={s["overlap-contact__bottom-row"]}>
                 <div>
-                    <h3>Phone Numbers</h3>
+                    <h3>Número de telefone</h3>
                     <address>
                         {
                             props.contact.phone.map((phone: any) => (
@@ -49,7 +49,7 @@ const props = Astro.props;
                     </address>
                 </div>
                 <div>
-                    <h3>Email Address</h3>
+                    <h3>E-mail</h3>
                     <address class={s["two_column_contact__email"]}>
                         {
                             props.contact.email.map((email: any) => (
