--- a/src/components/Sections/SymbioticAbout/SymbioticAbout.astro
+++ b/src/components/Sections/SymbioticAbout/SymbioticAbout.astro
@@ -15,7 +15,7 @@ const props = Astro.props;
     data-offscreen
 >
     <Container>
-        <div class={s["symbiotic-about__top-section"]}>
+        <div class={s["symbiotic-about__top-section"]} data-animate="fade-slide">
             <CustomImage
                 classlist={s["symbiotic-about__image"]}
                 eager={false}
@@ -36,7 +36,7 @@ const props = Astro.props;
     <Container>
         <div class={s["symbiotic-about__bottom-section"]}>
             <div class={s["symbiotic-about__content"]}>
-                <article>
+                <article class={s["symbiotic-about__content-article"]}>
                     <slot set:html={extractLexicalText(props.body)} />
                 </article>
             </div>
